# shinka

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml  test_scrape.py
src/shinka/: __init__.py  cli.py  levels.py  prompt_builder.py  scraper.py  setup.py  templates.py  ui.py  wizard.py
