[project]
name = "shinka"
version = "1.0.0"
description = "7 Levels Frontend Design Prompt Wizard — anime-powered CLI with local AI"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
    "typer[all]>=0.12",
    "pyperclip>=1.8",
    "ollama>=0.4",
    "httpx>=0.27",
    "playwright>=1.40",
]

[project.scripts]
shinka = "shinka.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
